samples/_failures_safe/1761130222_6b53f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8470a32d.c: In function ‘main’:
./samples/SAFE/__tmp_8470a32d.c:169:17: error: expected ‘;’ at end of input
  169 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_8470a32d.c:169:9: error: expected declaration or statement at end of input
  169 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_8470a32d.c:169:9: error: expected declaration or statement at end of input
